# screen-share

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cxx
client/src/network/: Client.cxx  Client.hpp
host/: CMakeLists.txt
host/src/: Frame.cxx  Frame.hpp  main.cxx
host/src/compression/: JPEG.cxx  JPEG.hpp  PNG.hpp  Raw.cxx  Raw.hpp  RawDiff.hpp
host/src/network/: Server.cxx  Server.hpp
